Increasing the mobile, layout (Hero Section spacing between video and content) and fixing aos configuration (method section animation type)

--- a/styles/sass/pages/_hero.scss
+++ b/styles/sass/pages/_hero.scss
@@ -20,7 +20,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    gap: 3rem;
+    gap: 0 3rem;
     margin: 0 auto;
     width: 85%;
 
